[versioneer]
VCS = git
style = pep440
versionfile_source = yodapy/_version.py
versionfile_build = yodapy/_version.py
tag_prefix = v
parentdir_prefix = 

[metadata]
description-file = README.md
license_file = LICENSE

[isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip=__init__.py
use_parentheses=true
known_first_party=attr

[check-manifest]
ignore = 
    .travis.yml
    .appveyor.yml
    .coverage
    .coveragerc
    Makefile
    docs
    docs/*
    *.enc
    tests
    tests/*
    examples
    examples/*
